--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,8 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Ignore all files
+*
+!*/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# local env files
-.env*.local
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Whitelist
+!/.gitignore
+!/src/components/**/*
+!./README.md
