--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,47 @@
-# Ignore all files
-*
-!*/
+/src
+!/src/components
+/public
 
-# Whitelist
-!/.gitignore
-!/src/components/**/*
-!./README.md
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+.storybook
+.npmrc
+package-lock.json
+package.json
+tsconfig.json
+next.config.js
+.eslintrc.json
